Add Swift back-end
This patch allows to use tabled with OpenStack Swift object store as if it
were our chunkserver, with some extra tricks. The configuration has to be
entred manually into CLD, just like in case of filesystem back-end.

The code is fairly experimental, so it retains extra messages.

Also, since Swift authorizes by plaintext passwords, support for SSL is
essential, but is currently missing.

There is no build-time test for this, because it would require us to
depend on OpenStack, which is untenable.

Signed-off-by: Pete Zaitcev <zaitcev@redhat.com>
Signed-off-by: Jeff Garzik <jgarzik@redhat.com>

--- a/doc/etc.tabled.conf
+++ b/doc/etc.tabled.conf
@@ -43,8 +43,9 @@
  </CLD>
 -->
 
-<ChunkUser>test</ChunkUser>
-<ChunkKey>test</ChunkKey>
+<!-- swift-auth-add-user -K devauth -a tabled tester1 tester1 -->
+<ChunkUser>tester1</ChunkUser>
+<ChunkKey>tester1</ChunkKey>
 
 <!-- Monitoring interface. Best is not to expose this to Internet. -->
 <StatusPort>8084</StatusPort>
